k8s/servian-sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: servian-backend-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: servian-backend
  sessionAffinity: None
  type: ClusterIP
